--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <ul class="resolutionMenu mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="selectResolution">
               <li class="mdl-menu__item" data-value="1280:720">720p</li>
               <li class="mdl-menu__item" data-value="1920:1080">1080p</li>
+              <li class="mdl-menu__item" data-value="2560:1440">1440p</li>
               <li class="mdl-menu__item" data-value="3840:2160">4K</li>
             </ul>
 
@@ -48,6 +49,8 @@
             <ul class="framerateMenu mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="selectFramerate">
               <li class="mdl-menu__item" data-value="30">30 FPS</li>
               <li class="mdl-menu__item" data-value="60">60 FPS</li>
+              <li class="mdl-menu__item" data-value="90">90 FPS</li>
+              <li class="mdl-menu__item" data-value="120">120 FPS</li>
             </ul>
 
             <div id="framerateTooltip" class="mdl-tooltip" for="framerateMenu">
